--- a/stile.css
+++ b/stile.css
@@ -15,7 +15,7 @@ a { color: inherit; text-decoration: none; }
   --bg-suave:#f8fafc;
   --borda:#e5e7eb;
   --radius:12px;
-  --vidro:rgba(236, 212, 212, 0.1);
+  --vidro:#5b21b6;
 }
 .container { width: min(1120px, 92%); margin-inline: auto; }
 .sec { padding: 64px 0; }
@@ -131,8 +131,15 @@ input:focus, textarea:focus { outline:2px solid var(--prim); border-color:transp
   .grid{ grid-template-columns: repeat(2, 1fr); }
   .hero { grid-template-columns: 1fr; }
 }
-@media (max-width: 640px){
   .menu { gap: .25rem; }
   .menu a { padding: .5rem; }
   .grid{ grid-template-columns: 1fr; }
-} 
+
+
+/* Cor personalizada para o subtítulo 'certificados' */
+.certificados-titulo {
+  background-color: rgb(210, 137, 223);
+  color: #5B21B6;
+
+  font-weight: bold; 
+}
